welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:7: error: ';' expected but integer literal found.
if(vit > 81 ) retun 2;
                    ^