welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.code
def caughtSpeeding(speed:Int, isBirthday:Boolean):Int = {
var vit=0;
vit = speed;
if(isBirthday() == true) return 0;
if(vit < 60 ) return 0;
if(vit < 80 && vit > 61 ) return 1;
if(vit > 81 ) retun 2;





}









